--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,14 @@ services:
     ports:
       - "9090:9090"
     restart: always
+  
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    restart: always
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin # default login is admin/admin
+    depends_on:
+      - prometheus
