--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,11 +12,15 @@ services:
       # We pass the version directly into the provider here
       - "--providers.docker.endpoint=unix:///var/run/docker.sock"
       - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443" # Enable HTTPS port
+      - "--providers.file.filename=/etc/traefik/traefik_dynamic.yml" # Load the SSL configx`
     ports:
       - "80:80"
+      - "443:443"
       - "8081:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "./traefik_dynamic.yml:/etc/traefik/traefik_dynamic.yml:ro"
 
   app:
     build: .
@@ -24,7 +28,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.app.rule=Host(`app.localhost`)"
-      - "traefik.http.routers.app.entrypoints=web"
+      - "traefik.http.routers.app.entrypoints=websecure" # use HTTPS
+      - "traefik.http.routers.app.tls=true" # Enable TLS
       - "traefik.http.services.app-service.loadbalancer.server.port=8000"
     restart: always
 
@@ -36,7 +41,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.prometheus.rule=Host(`prometheus.localhost`)"
-      - "traefik.http.routers.prometheus.entrypoints=web"
+      - "traefik.http.routers.prometheus.entrypoints=websecure"
+      - "traefik.http.routers.prometheus.tls=true"
       - "traefik.http.services.prometheus-service.loadbalancer.server.port=9090"
     restart: always
   
@@ -46,7 +52,8 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.grafana.rule=Host(`grafana.localhost`)"
-      - "traefik.http.routers.grafana.entrypoints=web"
+      - "traefik.http.routers.grafana.entrypoints=websecure"
+      - "traefik.http.routers.grafana.tls=true"
       - "traefik.http.services.grafana-service.loadbalancer.server.port=3000"
     restart: always
     environment:
