--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,3 +73,20 @@ services:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     depends_on:
       - prometheus
+
+  loki:
+    image: grafana/loki:latest
+    container_name: loki 
+    volumes:
+      - ./loki/loki-config.yml:/etc/loki/local-config.yaml
+    command: -config.file=/etc/loki/local-config.yaml
+    restart: always
+  
+  promtail:
+    image: grafana/promtail:latest
+    container_name: promtail 
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - ./promtail/promtail-config.yml:/etc/promtail/config.yml
+    command: -config.file=/etc/promtail/config.yml
+    restart: always
